# DC-South-East-Study

./: README.md  pyproject.toml  requirements.txt  start.py
data/: DS4EJ_EJScreen_State_BGLevel_NC.csv  DS4EJ_EJScreen_State_BGLevel_NC_Summarized_By_County.csv  read me.txt
data/processed/block group/: DC-filtered_EJSCREEN_2024_BG_StatePct_with_AS_CNMI_GU_VI.csv
data/processed/shapefiles/track/: merged_shapefile.dbf
data/processed/track/: DC-filtered_EJScreen_2024_Tract_StatePct_with_AS_CNMI_GU_VI.csv
data/raw/shapefiles/tl_2024_11_bg/: tl_2024_11_bg.dbf  tl_2024_11_bg.shp  tl_2024_11_bg.shp.ea.iso.xml  tl_2024_11_bg.shp.iso.xml  tl_2024_11_bg.shx
data/raw/shapefiles/tl_2024_11_cousub/: tl_2024_11_cousub.dbf  tl_2024_11_cousub.shp  tl_2024_11_cousub.shp.ea.iso.xml  tl_2024_11_cousub.shp.iso.xml  tl_2024_11_cousub.shx
data/raw/shapefiles/tl_2024_11_tract/: tl_2024_11_tract.shp.iso.xml
notebooks/: start.ipynb
src/: clean_data.py  get_data_from_api.py  get_study_data.py  start.py
